Created Rank component, adjusted styling

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ body {
   color: #e2e2e2;
 }
 
+button {
+  cursor: pointer;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
